[package]
name = "capture-stdio"
version = "0.1.1"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2021"
description = "Capture stdin/out/err of the current process"
repository = "https://github.com/jiegec/capture-stdio"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.131"
os_pipe = "1.0.1"
